# atcoder-solutions

./: .gitignore  README.md  main.php  template.cpp  template.php  test.cpp
brute-force/: abc197_c.php
contest/a/: main.php
contest/b/: main.php
contest/c/: main.php
contest/d/: main.php
contest/e/: main.php
periodicity/: abc174_c.php
practice/fsharp/: practice.fsx  practice2.fsx  practice3.fsx  practice4.fsx
practice/scheme/: addtup.scm  compare-number.scm  list-manipulation.scm  nested-list.scm  number.scm  practice.scm  practice2.scm  shadow.scm  tupplus.scm
scripts/: oj.sh
solutions/: a.out  abc114_c.php  abc183_e.cpp  abc186_e.cpp  abc187_e.cpp  abc189_c2.cpp  abc189_c3.cpp  abc189_c4.cpp  abc189_e.cpp  abc190_e.cpp  abc192_e.cpp  abc193_e.cpp  abc194_e.cpp  abc196_c.php  abc197_e.php  abc198_e.php  abc199_e.php  abc202_d.php  abc202_d2.php  abc202_e.php
solutions/cpp/: abc182_e.cpp  abc185_e.cpp  abc188_e.cpp  abc189_c.cpp  abc189_c3.cpp  abc191_e.cpp  abc193_e.cpp  abc195_e.cpp  abc203_d.cpp  atc002_a.cpp
solutions/fsharp/: Program.fsx  main.fsx  main2.fsx  main2_1.fsx  main3.fsx  main3_1.fsx  main4-1.fsx  main4.fsx  main5.fsx  main6.fsx  main7.fsx  main8-1.fsx  main8-2.fsx  main8.fsx  test.fsx
solutions/php/: abc051_b.php  abc137_c.php  abc174_c.php  abc196_e.php  abc200_e.php  abc202_d2.php  arc061_a.php
solutions/ruby/: abc198_e.rb
solutions/rust/: Cargo.toml  main  main.rs  main2.rs  main3.rs  main4.rs  main5.rs  main6.rs  main7.rs
solutions/typescript/: .tsconfig.json  package-lock.json  package.json
(+12 files in other folders)
